para_verificar_alteração